--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Castoro Titling', cursive;
 }
 body {
   background: url('./cover1.png') center center no-repeat fixed;
