--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,17 +4,35 @@
   font-family: 'Castoro Titling', cursive;
 }
 body {
-  background: url('./cover1.png') center center no-repeat fixed;
+  background: url('../cover1.png') center center no-repeat fixed;
   background-size: cover;
 }
-.container {
+.button {
+  position: absolute;
+  top: 291px;
+  left: 208px;
+  border: 2px solid white;
+  background: none;
+  padding: 9px 28px;
+  border-radius: 4px;
+  color: white;
+  font-size: 16px;
+  text-decoration: none;
+  vertical-align: middle;
+}
+.button:hover {
+  background: white;
+  color: rgb(86, 1, 1);
+  opacity: 0.5;
+}
+.container1 {
   position: absolute;
   right: 170px;
   top: 29%;
   width: 28%;
   /* height: 47%; */
 }
-.container h1 {
+.container1 h1 {
   display: inline-block;
   margin-bottom: 20px;
   border-bottom: 4px solid rgb(195, 190, 190);
@@ -24,7 +42,16 @@ body {
 .logn {
   cursor: pointer;
   padding: 8px 30px;
-  margin: 30px 5px;
+  margin: 30px 125px;
+  border: 2px solid white;
+  background: none;
+  color: white;
+  border-radius: 5px;
+}
+.sign {
+  cursor: pointer;
+  padding: 8px 30px;
+  margin: 0px 59px;
   border: 2px solid white;
   background: none;
   color: white;
@@ -56,4 +83,19 @@ body {
   background: white;
   color: rgb(86, 1, 1);
   opacity: 0.5;
+}
+.sign:hover {
+  background: white;
+  color: rgb(86, 1, 1);
+  opacity: 0.5;
+}
+.forgot {
+  text-decoration: none;
+  color: white;
+  position: relative;
+
+  left: 17px;
+  font-size: 13px;
+
+  border-bottom: 2px solid;
 }
